--- a/package.json
+++ b/package.json
@@ -12,12 +12,17 @@
   },
   "dependencies": {
     "@tauri-apps/api": "^1.2.0",
+    "leaflet": "^1.9.3",
     "next": "^13.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.0",
+    "react-leaflet-draw": "^0.20.4",
+    "react-rnd": "^10.4.1"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.2.2",
+    "@types/leaflet": "^1.9.0",
     "@types/node": "^18.7.11",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
