:sparkles: マップピンと経緯度の連携できた

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,9 @@
       ],
       "@/styles/*": [
         "src/styles/*"
+      ],
+      "@/view/*": [
+        "src/view/*"
       ]
     }
   },
