--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.4",
+    "@next/font": "^13.1.2",
     "@tauri-apps/api": "^1.2.0",
     "leaflet": "^1.9.3",
     "next": "^13.0.0",
@@ -18,7 +23,8 @@
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.0",
     "react-leaflet-draw": "^0.20.4",
-    "react-rnd": "^10.4.1"
+    "react-rnd": "^10.4.1",
+    "recoil": "^0.7.6"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.2.2",
