--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "sass": "^1.57.1",
-    "typescript": "^4.7.4"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.4"
   }
 }
