--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.11.4",
     "@next/font": "^13.1.2",
     "@tauri-apps/api": "^1.2.0",
+    "firebase": "^9.16.0",
     "leaflet": "^1.9.3",
     "next": "^13.0.0",
     "react": "^18.2.0",
