:sparkles: オフライン時の処理追加

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-leaflet": "^4.2.0",
     "react-leaflet-draw": "^0.20.4",
     "react-rnd": "^10.4.1",
-    "recoil": "^0.7.6"
+    "recoil": "^0.7.6",
+    "tauri-plugin-store-api": "https://github.com/tauri-apps/tauri-plugin-store"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.2.3",
